Add Barchart, BarChartSeatsPerClass, deliver sample data for all charts

--- a/src/App.css
+++ b/src/App.css
@@ -39,8 +39,9 @@ ul {
 .graphPanel ul li {
   display: inline-block;
   width: 50%;
-  min-width: 300px;
-  min-height: 300px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #696160;
 }
 
 .graphPanel:hover {
